--- a/index.html
+++ b/index.html
@@ -4,30 +4,88 @@
     <title>Socket.IO Client</title>
     <style>
       body {
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        max-width: 600px;
+        margin: auto;
+        height: 94vh;
+        margin-top: 3vh;
         font-family: Arial, sans-serif;
-      }
-      ul {
-        list-style-type: none;
         padding: 0;
+        display: flex;
+        flex-direction: column;
+        background-color: #f0f0f0;
       }
+
+      ul {
+        border-top-left-radius: 20px;
+        border-top-right-radius: 20px;
+        list-style-type: none;
+        padding: 10px;
+        margin: 0;
+        flex: 1;
+        overflow-y: auto;
+        display: flex;
+        flex-direction: column;
+        background-color: #ffffff;
+        box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.05);
+      }
+
       li {
-        padding: 8px;
-        margin-bottom: 10px;
-        background: #f3f3f3;
-        border-radius: 4px;
+        padding: 10px 15px;
+        margin: 8px 10px;
+        background: #0078ff;
+        color: white;
+        border-radius: 15px 15px 15px 0;
+        max-width: 70%;
+        align-self: flex-end;
+        word-wrap: break-word;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
       }
+
+      .received {
+        background: #e4e6eb;
+        color: #000;
+        align-self: flex-start;
+        border-radius: 15px 15px 0 15px;
+      }
+
+      form {
+        display: flex;
+        padding: 10px;
+        background: #fff;
+        border-top: 1px solid #ddd;
+        border-bottom-left-radius: 20px;
+        border-bottom-right-radius: 20px;
+        box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
+      }
+
       input {
         padding: 10px;
-        border-radius: 4px;
+        border-radius: 25px;
         border: 1px solid #ddd;
-        width: 90%;
+        width: 100%;
+        margin-right: 10px;
+        font-size: 15px;
+        background: #f9f9f9;
       }
+
       button {
-        padding: 10px;
-        border-radius: 4px;
-        border: 1px solid #ddd;
-        background: #5cb85c;
+        padding: 10px 20px;
+        border-radius: 25px;
+        border: none;
+        background: linear-gradient(45deg, #ff0040, #ff8000);
         color: #fff;
+        font-size: 15px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+      }
+
+      /* Aggiungere icona di invio */
+      button::before {
+        content: "✉️";
+        margin-right: 5px;
       }
     </style>
   </head>
